@@ -1,3 +1,12 @@
+2018-07-16  Jonathan Wakely  <jwakely@redhat.com>
+
+	PR libstdc++/86537
+	* include/bits/shared_ptr.h (less<shared_ptr<_Tp>>): Remove
+	non-standard partial specialization.
+	* include/bits/shared_ptr_base.h (_Sp_less): Remove class definition.
+	(less<__shared_ptr<_Tp, _Lp>): Remove partial specialization.
+	* testsuite/20_util/shared_ptr/comparison/86537.cc: New test.
+
 2018-07-16  Andreas Krebbel  <krebbel@linux.ibm.com>
 
 	* config/abi/post/s390-linux-gnu/baseline_symbols.txt: Update.
